--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -84,6 +84,9 @@ body {
 /* =================================
   Flexbox
 ==================================== */
+.grid {
+  text-align: center;
+}
 
 .row {
 	display: flex;
@@ -98,3 +101,11 @@ body {
 	justify-content: space-between;
   max-width: 530px;
 }
+
+.item {
+  display: flex;
+}
+
+/* =================================
+  hide/show
+==================================== */
