--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -11,14 +11,13 @@ body {
 	font-family: 'Varela Round', sans-serif;
 	color: #fff;
 	background: #e8e9e9;
-	padding-left: 5%;
-	padding-right: 5%;
+
 }
 
 .row {
 	padding: 10px;
 	background: #fff;
-	margin:  0 auto;
+	/*margin:  0 auto;*/
   box-shadow: 0 1.5px 0 0 rgba(0,0,0,0.1);
 }
 
@@ -61,7 +60,7 @@ body {
   align-items: center;
 }
 
-.o-turn {
+/*.my-turn {
 	color: #fff;
   height: 50px;
   width: 20%;
@@ -72,6 +71,31 @@ body {
 	border-radius: 6px;
   font-size: 2em;
   opacity: .4;
+}*/
+
+#myTurnX{
+	color: #fff;
+  height: 50px;
+  width: 20%;
+	padding: 15px;
+	margin: 0 10px 0 10px;
+  text-align: center;
+	background: #f45642;
+	border-radius: 6px;
+  font-size: 2em;
+
+}
+
+#myTurnO{
+	color: #fff;
+  height: 50px;
+  width: 20%;
+	padding: 15px;
+	margin: 0 10px 0 10px;
+  text-align: center;
+	background: #f45642;
+	border-radius: 6px;
+  font-size: 2em;
 }
 
 .btm-nav {
@@ -81,15 +105,27 @@ body {
   box-shadow: 0 1.5px 0 0 rgba(0,0,0,0.1);
 }
 
+h2 {
+  margin-top: 50px;
+}
+
 /* =================================
   Flexbox
 ==================================== */
 
+.login {
+  display: flex;
+	flex-wrap: row-wrap;
+	justify-content: flex-end;
+  margin: 0 auto;
+  max-width: fit-content;
+}
 
 .row {
 	display: flex;
 	flex-wrap: row-wrap;
-	justify-content: flex-end;
+	justify-content: space-between;
+  margin: 0 auto;
   max-width: fit-content;
 }
 
