WIP - Authentication Works
No working on sending game state to api

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -105,6 +105,9 @@ body {
   box-shadow: 0 1.5px 0 0 rgba(0,0,0,0.1);
 }
 
+.api {
+  visibility: hidden;
+}
 
 
 /* =================================
