--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -11,6 +11,7 @@ body {
 	font-family: 'Varela Round', sans-serif;
 	color: #fff;
 	background: #e8e9e9;
+  margin: 0 10px;
 	/*padding-left: 5%;
 	padding-right: 5%;*/
 }
@@ -19,6 +20,7 @@ body {
   display: flex;
   background: #83878c;
 }
+
 
 .nav {
   display: flex;
@@ -50,7 +52,10 @@ body {
 	background: #3db5da;
 	border-radius: 6px;
   font-size: 6em;
+}
 
+.clicked {
+  pointer-events: none
 }
 
 .x-turn {
@@ -79,6 +84,16 @@ body {
   font-size: 1em;
 	border-radius: 6px;
   align-items: center;
+}
+
+.game-icons {
+  display: inline;
+}
+
+#games-played {
+  margin: 0 auto;
+  display: inline;
+
 }
 
 .shade{
